--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootRun {
+  // Use Spring Boot DevTool only when we run Gradle bootRun task
+  classpath = sourceSets.main.runtimeClasspath + configurations.developmentOnly
+    sourceResources sourceSets.main
+}
